# Dystopia

./: .env  .gitignore  Cargo.toml  README.md
crates/dystopia_app/: Cargo.toml
crates/dystopia_app/assets/configs/: star_names.json  star_properties.json
crates/dystopia_app/assets/configs/user/: input_mapping.json
crates/dystopia_app/assets/images/: Tile Template.aseprite
crates/dystopia_app/assets/localization/: current.json  zh_hans.json
crates/dystopia_app/assets/shaders/: math.wgsl
crates/dystopia_app/assets/shaders/bodies/: giant_body.wgsl  orbit.wgsl  rocky_body.wgsl  star.wgsl
crates/dystopia_app/assets/shaders/tilemap/: tilemap.wgsl
crates/dystopia_app/assets/shaders/ui/: selecting.wgsl
crates/dystopia_app/examples/: debug.rs
crates/dystopia_app/src/: main.rs
crates/dystopia_app/src/debug/: mod.rs
crates/dystopia_core/: Cargo.toml
crates/dystopia_core/src/: lib.rs
crates/dystopia_core/src/assets/: app_ext.rs  config.rs  manifest.rs  mod.rs  texture.rs
crates/dystopia_core/src/body/: mod.rs  quantify.rs
crates/dystopia_core/src/character/: camera.rs  mod.rs  player.rs
crates/dystopia_core/src/cosmos/: bundle.rs  celestial.rs  config.rs  mesh.rs  mod.rs  sim.rs
crates/dystopia_core/src/input/: camera.rs  event.rs  ext.rs  mapping.rs  mod.rs  scene.rs  ui.rs
crates/dystopia_core/src/localization/: macros.rs  mod.rs  number.rs  time.rs  ui.rs
crates/dystopia_core/src/map/: bundle.rs  mod.rs  removal.rs  rm_vis.rs  serde.rs  shape.rs  storage.rs  tilemap.rs
crates/dystopia_core/src/map/quantify/: parameter.rs
crates/dystopia_core/src/map/render/: mesh.rs  mod.rs  resource.rs  texture.rs
crates/dystopia_core/src/math/: mod.rs
crates/dystopia_core/src/math/raycasting/: mod.rs  scene.rs  ui.rs
crates/dystopia_core/src/math/shape/: icosahedron.rs  mod.rs
crates/dystopia_core/src/scene/: mod.rs
crates/dystopia_core/src/scene/transition/: cosmos_to_body.rs  cosmos_view.rs  focusing_body.rs  mod.rs
crates/dystopia_core/src/schedule/: mod.rs  signal.rs  state.rs  system_set.rs
crates/dystopia_core/src/sci/: mod.rs  physics.rs  unit.rs
crates/dystopia_core/src/serde/: load.rs  mod.rs
crates/dystopia_core/src/sim/: mod.rs
crates/dystopia_core/src/simulation/: mod.rs
crates/dystopia_core/src/transition/: mod.rs
crates/dystopia_core/src/ui/: body_data_panel.rs  button.rs  common.rs  ext.rs  interaction.rs  macros.rs  mod.rs  preset.rs  primitive.rs  scrollable_list.rs  sync.rs  transition.rs  update.rs
crates/dystopia_core/src/ui/interation/: body_focus_button.rs  close_button.rs  mod.rs
crates/dystopia_core/src/ui/panel/: body_data.rs  mod.rs  scene_title.rs  system_statistics.rs
crates/dystopia_core/src/ui/selecting/: body.rs  mod.rs
crates/dystopia_core/src/util/: alpha.rs  chunking.rs  macros.rs  mod.rs
crates/dystopia_derive/: Cargo.toml
crates/dystopia_derive/src/: as_built_component.rs  helper.rs  lib.rs  localizable_enum.rs  localizable_struct.rs  quantified.rs  unit.rs
crates/infinity_garden_app/: Cargo.toml
crates/infinity_garden_app/assets/configs/: star_properties.json
crates/infinity_garden_app/src/: main.rs
crates/infinity_garden_app/src/debug/: mod.rs
crates/infinity_garden_core/: Cargo.toml
crates/infinity_garden_core/src/: lib.rs
crates/infinity_garden_core/src/assets/: app_ext.rs  config.rs  manifest.rs  mod.rs
crates/infinity_garden_core/src/cosmos/: celestial.rs  config.rs  mod.rs  unit.rs
crates/infinity_garden_core/src/localization/: mod.rs
crates/sirius-app/: Cargo.toml
crates/sirius-core/: Cargo.toml
docs/: 宇宙设定.md  简介.md
py/: test.py  updown_tri.py
(+4 files in other folders)
