[workspace]
members = ["crates/*"]
resolver = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_sprite",
    "bevy_state",
    "bevy_ui",
    "multi_threaded",
    "png",
] }

[workspace.dev-dependencies]
bevy = { features = ["bevy_gizmos", "trace_tracy"] }
