[workspace]
members = ["crates/*"]
resolver = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
avian2d = { version = "0.1" }
bevy = { version = "0.14", default-features = false, features = [
    "bevy_sprite",
    "bevy_state",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "serialize",
] }
bevy-inspector-egui = "0.25"
bincode = "2.0.0-rc.3"
bitflags = "2.6"
dotenvy = "0.15"
enum-map = "2.7"
hashbrown = { version = "0.14", features = ["rayon"] }
indexmap = "2.2"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
uuid = "1.9"
