[package]
name = "dystopia_app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
dystopia_core = { version = "0.1.0", path = "../dystopia_core" }

[dev-dependencies]
bevy = { version = "0.14", default-features = true, features = [
    "bevy_dev_tools",
    "bevy_gizmos",
] }
rand = "0.8"

[[example]]
name = "debug"
path = "examples/debug.rs"
