[package]
name = "dystopia_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bitflags.workspace = true
dystopia_derive = { version = "0.1.0", path = "../dystopia_derive" }
enum-map.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
